# neotest-cpp

./: .gitignore  Makefile  README.md
.github/workflows/: style.yml  test.yml
lua/neotest-cpp/: config.lua  init.lua
lua/neotest-cpp/framework/: catch2.lua  init.lua
lua/neotest-cpp/provider/: ctest.lua  init.lua  meson.lua
tests/integration/: adapter_spec.lua  ctest_catch2_spec.lua  ctest_spec.lua  utils.lua
tests/integration/cmake/: CMakeLists.txt  Makefile
tests/integration/cmake/.cache/clangd/index/: CATCH_TEST_CASE_test.cpp.B741AEAFE91986E3.idx  TEST_CASE_test.cpp.1BFADDC88292ECD6.idx
tests/integration/cmake/src/catch2/: CATCH_TEST_CASE_test.cpp  CMakeLists.txt  TEST_CASE_test.cpp
tests/integration/meson/: Makefile  meson.build
tests/integration/meson/src/catch2/: meson.build
tests/unit/: catch2_spec.lua  ctest_spec.lua  init_default_spec.lua  init_user_spec.lua  meson_spec.lua  minimal_init.lua
tests/unit/data/framework/catch2/: CATCH_SCENARIO_test.cpp  CATCH_TEST_CASE_METHOD_test.cpp  CATCH_TEST_CASE_test.cpp  SCENARIO_test.cpp  TEST_CASE_METHOD_test.cpp  TEST_CASE_test.cpp
