test_case = executable('catch2_TEST_CASE',
  'TEST_CASE_test.cpp',
  dependencies: catch2_with_main_dep)
test('catch2_TEST_CASE', test_case)

catch_test_case = executable('catch2_CATCH_TEST_CASE',
  'CATCH_TEST_CASE_test.cpp',
  dependencies: catch2_with_main_dep)
test('catch2_CATCH_TEST_CASE', catch_test_case)
